11/06/2020 - change accent colors/fixed bugs on mobile

--- a/envo-storefront-child/media.css
+++ b/envo-storefront-child/media.css
@@ -14,12 +14,12 @@
     }
 
     #site-navigation {
-        background-color: #2e9bca;
+        background-color: #00acec;
         border: none
     }
 
     .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-        background-color: #2e9bca;
+        background-color: #00acec;
     }
 
     .header-contacts {
@@ -59,7 +59,7 @@
 
 
     .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-        background-color: #2e9bca;
+        background-color: #00acec;
     }
 
     /*SLIDER*/
